moved import statement

--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -60,8 +60,6 @@
     "TOTAL_STEPS = 100\n",
     "SIM_DURATION = TOTAL_STEPS*STEP_SIZE\n",
     "\n",
-    "RENDER_INTERVAL = 5\n",
-    "\n",
     "LIGAND_OFFSET = (10.0, 10.0, 0.0)\n",
     "\n",
     "ENERGY_TOLERANCE = 2.0\n",
@@ -88,15 +86,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "STEP_PER_REPORT = 100\n",
-    "RESTART_FILE = 'restart.rst7'\n",
-    "STATE_RESTART_FILE = 'restart.xml'\n",
-    "CHECKPOINT_RESTART_FILE = 'restart.chk'\n",
+    "RENDER_INTERVAL = 5\n",
     "\n",
     "PDB_FRAME_DIR= 'pdb-frames'\n",
     "PDB_REPORT_FILE = 'simulation.pdb'\n",
     "DCD_REPORT_FILE = 'simulation.dcd'\n",
-    "STATE_REPORT_FILE = 'simulation.state.txt'"
+    "STATE_REPORT_FILE = 'simulation.state.txt'\n",
+    "\n",
+    "STEP_PER_REPORT = 100\n",
+    "RESTART_FILE = 'restart.rst7'\n",
+    "STATE_RESTART_FILE = 'restart.xml'\n",
+    "CHECKPOINT_RESTART_FILE = 'restart.chk'"
    ]
   },
   {
@@ -130,8 +130,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from openforcefield.utils.toolkits import AmberToolsToolkitWrapper\n",
-    "\n",
     "molecules = [\n",
     "    Molecule.from_file('sdf/ligand-CID644019.sdf'),\n",
     "    Molecule.from_file('sdf/di-o-methyl-beta-cyclodextrin-CID10171019.sdf')]\n",
