added import statement

--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -25,7 +25,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,6 +44,7 @@
     "from parmed.openmm.reporters import RestartReporter\n",
     "from openforcefield.topology import Molecule\n",
     "from openmmforcefields.generators import GAFFTemplateGenerator\n",
+    "from openforcefield.utils.toolkits import AmberToolsToolkitWrapper\n",
     "\n",
     "%run utilities\n",
     "# %run OPLSLennardJones"
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,15 +127,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "Molecule with name '644019' and SMILES '[H][O][C]1=[C]([H])[C]([C]([H])([H])[C]([H])([H])[C]([H])([H])[C]([H])([H])[C]([H])([H])[H])=[C]([H])[C]([O][H])=[C]1[C@]1([H])[C]([H])=[C]([C]([H])([H])[H])[C]([H])([H])[C]([H])([H])[C@@]1([H])[C](=[C]([H])[H])[C]([H])([H])[H]'\n"
+    }
+   ],
    "source": [
     "molecules = [\n",
     "    Molecule.from_file('sdf/ligand-CID644019.sdf'),\n",
     "    Molecule.from_file('sdf/di-o-methyl-beta-cyclodextrin-CID10171019.sdf')]\n",
     "\n",
     "for mol in molecules: \n",
+    "    print(mol)\n",
     "    mol.generate_conformers(n_conformers=1)\n",
     "    mol.compute_partial_charges_am1bcc(AmberToolsToolkitWrapper())\n",
     "    \n",
