added GBn2, removed large files

--- a/notebooks/simulations/CID10171019-CID644019-vacuum.ipynb
+++ b/notebooks/simulations/CID10171019-CID644019-vacuum.ipynb
@@ -21,7 +21,7 @@
     "from openforcefield.topology import Molecule, Topology\n",
     "from openmoltools.utils import smiles_to_mdtraj_ffxml\n",
     "\n",
-    "%run ../../src/report-utils"
+    "# %run ../../src/report-utils"
    ]
   },
   {
@@ -33,7 +33,7 @@
     "FFXML_DIR = './'\n",
     "\n",
     "STEP_SIZE = 250\n",
-    "TOTAL_STEPS = 100\n",
+    "TOTAL_STEPS = 1000\n",
     "SIM_DURATION = TOTAL_STEPS*STEP_SIZE\n",
     "\n",
     "ENERGY_TOLERANCE = 2.0\n",
@@ -61,8 +61,7 @@
     "STEP_PER_REPORT = 100\n",
     "RESTART_FILE = 'restart.rst7'\n",
     "STATE_RESTART_FILE = 'restart.xml'\n",
-    "CHECKPOINT_RESTART_FILE = 'restart.chk'\n",
-    "\n"
+    "CHECKPOINT_RESTART_FILE = 'restart.chk'"
    ]
   },
   {
@@ -104,7 +103,7 @@
     "    xmlfile.write(cdtFFXML.getvalue())\n",
     "\n",
     "# ligTRAJ_xyz._values = [Vec3(*row) for row in Rotation.from_euler('x', 180, degrees=True).apply(np.array(ligTRAJ_xyz[0]._value))]\n",
-    "ligTRAJ_xyz += np.array([0.0, 0.0, 10.0]) * unit.angstroms\n",
+    "ligTRAJ_xyz += np.array([0.0, 0.0, -10.0]) * unit.angstroms\n",
     "\n",
     "model = Modeller(cdtTRAJ_top, cdtTRAJ_xyz)\n",
     "model.add(ligTRAJ_top, ligTRAJ_xyz)"
@@ -156,7 +155,7 @@
    "source": [
     "for (i,s) in enumerate(range(STEP_SIZE, SIM_DURATION, STEP_SIZE)): \n",
     "    simulation.step(STEP_SIZE)\n",
-    "    print('System energy at step %s (%sfs):\\n\\t%s' % (i, s, echo_context_energy(simulation.context)))"
+    "#     print('System energy at step %s (%sfs):\\n\\t%s' % (i, s, echo_context_energy(simulation.context)))"
    ]
   },
   {
@@ -165,9 +164,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if STATE_FILE: simulation.saveState(STATE_FILE)\n",
-    "if CHECKPOINT_FILE: simulation.saveCheckpoint(CHECKPOINT_FILE)\n",
-    "if PDB_FRAME_DIR: save_frames_pdb(PDB_REPORT_FILE, where=PDB_FRAME_DIR, name=PDB_REPORT_FILE)"
+    "if STATE_RESTART_FILE: simulation.saveState(STATE_RESTART_FILE)\n",
+    "if CHECKPOINT_RESTART_FILE: simulation.saveCheckpoint(CHECKPOINT_RESTART_FILE)\n",
+    "# if PDB_FRAME_DIR: save_frames_pdb(PDB_REPORT_FILE, where=PDB_FRAME_DIR, name=PDB_REPORT_FILE)"
    ]
   },
   {
@@ -175,7 +174,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "RESTART_FILE = 'restart.rst7'\n",
+    "STATE_RESTART_FILE = 'restart.xml'\n",
+    "CHECKPOINT_RESTART_FILE = 'restart.chk'"
+   ]
   }
  ],
  "metadata": {
@@ -183,7 +186,7 @@
   "kernelspec": {
    "display_name": "Python 3.6.10 64-bit ('qcmm': conda)",
    "language": "python",
-   "name": "python361064bitqcmmcondab220bd5a26d1489ea52a6cd420b86a2d"
+   "name": "python361064bitqcmmcondac19dda4244fb4a8d8a50fb39055fedc3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -195,7 +198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.5"
+   "version": "3.6.10"
   },
   "mimetype": "text/x-python",
   "name": "python",
